# libsigrok_dslogic

./: .gitignore  Makefile.am  configure.ac
src/: drivers.c  log.c
src/hardware/dslogic/: Makefile.am  api.c  api.h  devdefs.h  dslogic.c  dslogic.h  fpga.c  fpga.h  protocol.c  protocol.h  transfer.c  transfer.h
src/hardware/ikalogic-scanalogic2/: api.c
