bin_programs = helloworld

AM_CFLAGS = -I../../include -I../../ -I.

helloworld_SOURCES = 	api.c \
						devdefs.h \
						dslogic.c \
						dslogic.h \
						protocol.c \
						protocol.h \
                                                fpga.h \
                                                fpga.c
